--- a/main/project1/pom.xml
+++ b/main/project1/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Identificação do Projeto -->
-    <groupId>com.exemplo</groupId>
+    <groupId>com.example</groupId>
     <artifactId>minhaaplicacao</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -15,11 +15,19 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <allure.version>2.13.8</allure.version>
+        <cucumber.version>6.10.4</cucumber.version>
     </properties>
 
     <!-- Dependências do Projeto -->
     <dependencies>
-        <!-- Dependência do JUnit 5 para testes -->
+        <!-- Selenium Java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
+        <!-- JUnit 5 para testes -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -33,19 +41,39 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Dependência do Allure para geração de relatórios -->
+        <!-- Allure para relatórios -->
         <dependency>
             <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-junit5</artifactId>
+            <artifactId>allure-cucumber5-jvm</artifactId>
             <version>${allure.version}</version>
-            <scope>test</scope>
+        </dependency>
+
+        <!-- Cucumber -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+
+        <!-- Apache Commons IO para manipulação de arquivos -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
         </dependency>
     </dependencies>
 
     <!-- Configurações de Build -->
     <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
         <plugins>
-            <!-- Plugin Maven Compiler -->
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -56,7 +84,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Plugin Maven Surefire para executar os testes -->
+            <!-- Maven Surefire Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
